unpackaged/main/default/objects/Quote_Log_Product__c/Quote_Log_Product__c.object-meta.xml
<CustomObject>
    <label>Quote Log Product</label>
    <nameField>
        <displayFormat>QP-{00000}</displayFormat>
        <label>Quote Log Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Log Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>