unpackaged/main/default/objects/Quote_Log_Product__c/fields/AR__c.field-meta.xml
<CustomField>
    <fullName>AR__c</fullName>
    <formula>Quote_Log__r.Opportunity_Name__r.Account.AR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR</label>
    <type>Checkbox</type>
</CustomField>