unpackaged/main/default/objects/Quote_Log_Product__c/fields/Current_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Premium__c</fullName>
    <label>Current Annual Premium</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>