unpackaged/main/default/objects/Quote_Log_Product__c/fields/Current_Rate_EE__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_EE__c</fullName>
    <label>Current Rate EE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>