unpackaged/main/default/objects/Quote_Log_Product__c/fields/Final_Formula_Premium__c.field-meta.xml
<CustomField>
    <fullName>Final_Formula_Premium__c</fullName>
    <label>Final Formula Premium (if sold)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>