unpackaged/main/default/objects/Quote_Log_Product__c/fields/FL__c.field-meta.xml
<CustomField>
    <fullName>FL__c</fullName>
    <formula>Quote_Log__r.Opportunity_Name__r.Account.FL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FL</label>
    <type>Checkbox</type>
</CustomField>