unpackaged/main/default/objects/Quote_Log_Product__c/fields/Formula_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Formula_Annual_Premium__c</fullName>
    <label>Formula Annual Premium</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>