unpackaged/main/default/objects/Quote_Log_Product__c/fields/HI__c.field-meta.xml
<CustomField>
    <fullName>HI__c</fullName>
    <formula>Quote_Log__r.Opportunity_Name__r.Account.HI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HI</label>
    <type>Checkbox</type>
</CustomField>