unpackaged/main/default/objects/Quote_Log_Product__c/fields/Number_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Number_Enrolled__c</fullName>
    <label>Number Enrolled</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>