unpackaged/main/default/objects/Quote_Log_Product__c/fields/Product_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Name__c</fullName>
    <formula>TEXT(Product_Sub_Cat__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category Name</label>
    <type>Text</type>
</CustomField>