unpackaged/main/default/objects/Quote_Log_Product__c/fields/Product_Sub_Cat__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Cat__c</fullName>
    <label>Product Sub Cat</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choice PPO - Vol</fullName>
            </value>
            <value>
                <fullName>Choice Plus PPO - Vol</fullName>
            </value>
            <value>
                <fullName>Choice Copay - Vol</fullName>
            </value>
            <value>
                <fullName>Choice PPO - TG</fullName>
            </value>
            <value>
                <fullName>Choice Plus PPO - TG</fullName>
            </value>
            <value>
                <fullName>Choice Copay - TG</fullName>
            </value>
            <value>
                <fullName>Dental Prepaid</fullName>
            </value>
            <value>
                <fullName>Select PPO - Vol</fullName>
            </value>
            <value>
                <fullName>Select PPO Plus -Vol</fullName>
            </value>
            <value>
                <fullName>Select PPO - Trad</fullName>
            </value>
            <value>
                <fullName>Select PPO Plus – Trad</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>PPO/DMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>