unpackaged/main/default/objects/Quote_Log_Product__c/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Sub Category</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.Product_Sub_Category__c</field>
            <operation>equals</operation>
            <value>Care, TG Choice, TG Choice Plus, TG Copayment, Traditional PPO, Traditional PPO+, Traditional PPP, Vol. Choice, Vol. Choice Plus, Vol. Copayment, Vol. PPO, Vol. PPO+, Vol. PPP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Log Products (Product Sub Category)</relationshipLabel>
    <relationshipName>Quote_Log_Product_Sub_Category</relationshipName>
    <type>Lookup</type>
</CustomField>