unpackaged/main/default/objects/Quote_Log_Product__c/fields/Quote_Log__c.field-meta.xml
<CustomField>
    <fullName>Quote_Log__c</fullName>
    <label>Quote Log</label>
    <referenceTo>Dental_Quote_Log__c</referenceTo>
    <relationshipLabel>Quote Log Products</relationshipLabel>
    <relationshipName>Quote_Log_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>