unpackaged/main/default/objects/Quote_Log_Product__c/fields/Quote_Rate_EC__c.field-meta.xml
<CustomField>
    <fullName>Quote_Rate_EC__c</fullName>
    <label>Quote Rate EC</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>