unpackaged/main/default/objects/Quote_Log_Product__c/fields/Quote_Rate_ES__c.field-meta.xml
<CustomField>
    <fullName>Quote_Rate_ES__c</fullName>
    <label>Quote Rate ES</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>