unpackaged/main/default/objects/Quote_Log_Product__c/fields/Quoted_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Annual_Premium__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quoted Annual Premium</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>