unpackaged/main/default/objects/Quote_Log_Product__c/fields/Quoted_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Ratio__c</fullName>
    <formula>IF ( OR (ISBLANK( Renewal_Annual_Premium__c ), Renewal_Annual_Premium__c =0) ,  Quoted_Annual_Premium__c /  Current_Annual_Premium__c ,  Quoted_Annual_Premium__c /  Renewal_Annual_Premium__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Renewal Premium is populated, Quoted/Renewal Premium. If not, Quoted/Current Premium.</inlineHelpText>
    <label>Quoted Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>