unpackaged/main/default/objects/Quote_Log_Product__c/fields/Renewal_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Annual_Premium__c</fullName>
    <label>Renewal Annual Premium</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>