unpackaged/main/default/objects/Quote_Log_Product__c/fields/Renewal_Rates_EE__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rates_EE__c</fullName>
    <label>Renewal Rates EE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>