unpackaged/main/default/objects/Quote_Log_Product__c/fields/Renewal_Rates_ES__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rates_ES__c</fullName>
    <label>Renewal Rates ES</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>