unpackaged/main/default/objects/Quote_Log_Product__c/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <formula>Quote_Log__r.Opportunity_Name__r.Account.RG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RG</label>
    <type>Checkbox</type>
</CustomField>