unpackaged/main/default/objects/Quote_Log_Product__c/fields/Sold_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Sold_Enrollment__c</fullName>
    <label>Sold Enrollment</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>