unpackaged/main/default/objects/Quote_Log_Product__c/fields/Sum_Category__c.field-meta.xml
<CustomField>
    <fullName>Sum_Category__c</fullName>
    <label>Sum Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choice PPO - Vol</fullName>
            </value>
            <value>
                <fullName>Choice Plus PPO - Vol</fullName>
            </value>
            <value>
                <fullName>Choice Copay - Vol</fullName>
            </value>
            <value>
                <fullName>Choice PPO - TG</fullName>
            </value>
            <value>
                <fullName>Choice Plus PPO - TG</fullName>
            </value>
            <value>
                <fullName>Choice Copay - TG</fullName>
            </value>
            <value>
                <fullName>Dental Prepaid</fullName>
            </value>
            <value>
                <fullName>Select PPO - Vol</fullName>
            </value>
            <value>
                <fullName>Select PPO Plus -Vol</fullName>
            </value>
            <value>
                <fullName>Select PPO - Trad</fullName>
            </value>
            <value>
                <fullName>Select PPO Plus – Trad</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
                <isActive>false</isActive>
                <label>Care</label>
            </value>
            <value>
                <fullName>TG Choice</fullName>
                <isActive>false</isActive>
                <label>TG Choice</label>
            </value>
            <value>
                <fullName>TG Choice Plus</fullName>
                <isActive>false</isActive>
                <label>TG Choice Plus</label>
            </value>
            <value>
                <fullName>TG Copayment</fullName>
                <isActive>false</isActive>
                <label>TG Copayment</label>
            </value>
            <value>
                <fullName>Traditional PPO</fullName>
                <isActive>false</isActive>
                <label>Traditional PPO</label>
            </value>
            <value>
                <fullName>Traditional PPO+</fullName>
                <isActive>false</isActive>
                <label>Traditional PPO+</label>
            </value>
            <value>
                <fullName>Traditional PPP</fullName>
                <isActive>false</isActive>
                <label>Traditional PPP</label>
            </value>
            <value>
                <fullName>Vol. Choice</fullName>
                <isActive>false</isActive>
                <label>Vol. Choice</label>
            </value>
            <value>
                <fullName>Vol. Choice Plus</fullName>
                <isActive>false</isActive>
                <label>Vol. Choice Plus</label>
            </value>
            <value>
                <fullName>Vol. Copayment</fullName>
                <isActive>false</isActive>
                <label>Vol. Copayment</label>
            </value>
            <value>
                <fullName>Vol. PPO</fullName>
                <isActive>false</isActive>
                <label>Vol. PPO</label>
            </value>
            <value>
                <fullName>Vol. PPO+</fullName>
                <isActive>false</isActive>
                <label>Vol. PPO+</label>
            </value>
            <value>
                <fullName>Vol. PPP</fullName>
                <isActive>false</isActive>
                <label>Vol. PPP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>