unpackaged/main/default/objects/Quote_Log_Product__c/validationRules/Cant_Switch_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Switch_State</fullName>
    <active>true</active>
    <description>Unable to change the customer state</description>
    <errorConditionFormula>AND( ISPICKVAL( PRIORVALUE(State__c), &quot;AR&quot;),  ISPICKVAL(State__c, &quot;FL&quot;),  NOT( $Profile.Name  = &#39;USAble System Administrator&#39;) )</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>You are Unable to change the customer state. Please check with your Salesforce Admin.</errorMessage>
</ValidationRule>