unpackaged/main/default/objects/Quote_Log_Product__c/validationRules/QLP01_Select_the_right_state_for_Regence.validationRule-meta.xml
<ValidationRule>
    <fullName>QLP01_Select_the_right_state_for_Regence</fullName>
    <active>true</active>
    <description>For Regence, select one of the states IA, ID, OR, WA</description>
    <errorConditionFormula>AND(
Quote_Log__r.Opportunity_Name__r.Account.RG__c  = TRUE, (ISNEW() || ISCHANGED(State__c)), OR(ISPICKVAL(State__c, &quot;AR&quot;), ISPICKVAL(State__c,&quot;FL&quot;), ISPICKVAL(State__c,&quot;HI&quot;)))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>For Regence, select one of the states IA, ID, OR, WA</errorMessage>
</ValidationRule>