unpackaged/main/default/objects/Quote_Log_Product__c/validationRules/QLP02_Select_the_right_state_for_HI.validationRule-meta.xml
<ValidationRule>
    <fullName>QLP02_Select_the_right_state_for_HI</fullName>
    <active>true</active>
    <description>For Hawaii, select state as HI</description>
    <errorConditionFormula>AND(
 Quote_Log__r.Opportunity_Name__r.Account.HI__c  = TRUE, (ISNEW() || ISCHANGED(State__c)), OR(ISPICKVAL(State__c, &quot;AR&quot;), ISPICKVAL(State__c,&quot;FL&quot;), ISPICKVAL(State__c,&quot;ID&quot;), ISPICKVAL(State__c,&quot;OR&quot;), ISPICKVAL(State__c,&quot;UT&quot;), ISPICKVAL(State__c,&quot;WA&quot;)))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>For Hawaii, select the state as HI</errorMessage>
</ValidationRule>