unpackaged/main/default/objects/Quote_Log_Product__c/validationRules/QLP03_Select_the_right_state_for_AR.validationRule-meta.xml
<ValidationRule>
    <fullName>QLP03_Select_the_right_state_for_AR</fullName>
    <active>true</active>
    <description>For Arkansas, select state as AR</description>
    <errorConditionFormula>AND(
Quote_Log__r.Opportunity_Name__r.Account.AR__c  = TRUE, (ISNEW() || ISCHANGED(State__c)), OR(ISPICKVAL(State__c, &quot;HI&quot;), ISPICKVAL(State__c,&quot;FL&quot;), ISPICKVAL(State__c,&quot;ID&quot;), ISPICKVAL(State__c,&quot;OR&quot;), ISPICKVAL(State__c,&quot;UT&quot;), ISPICKVAL(State__c,&quot;WA&quot;)))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>For Arkansas, select the state as AR</errorMessage>
</ValidationRule>