unpackaged/main/default/objects/Quote_Log_Product__c/validationRules/QLP04_Select_the_right_state_for_FL.validationRule-meta.xml
<ValidationRule>
    <fullName>QLP04_Select_the_right_state_for_FL</fullName>
    <active>true</active>
    <description>For Florida, select state as FL</description>
    <errorConditionFormula>AND(
Quote_Log__r.Opportunity_Name__r.Account.FL__c  = TRUE, (ISNEW() || ISCHANGED(State__c)), OR(ISPICKVAL(State__c, &quot;HI&quot;), ISPICKVAL(State__c,&quot;AR&quot;), ISPICKVAL(State__c,&quot;ID&quot;), ISPICKVAL(State__c,&quot;OR&quot;), ISPICKVAL(State__c,&quot;UT&quot;), ISPICKVAL(State__c,&quot;WA&quot;)))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>For Florida, select the state as FL</errorMessage>
</ValidationRule>