unpackaged/main/default/objects/Quote_Log_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Sub_Category__c</columns>
    <columns>Current_Rate_EE__c</columns>
    <columns>Quote_Rate_EE__c</columns>
    <columns>Renewal_Rates_EE__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>